--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_white_no_bg 2.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -46,7 +46,7 @@
         }
       }(window.location))
     </script>
-    <title>React App</title>
+    <title>BulSU Smart Schedule</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
